# missouri

./: .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  Client.cpp  Client.h  Decoder.cpp  Decoder.h  IOSurfaceTestView.h  IOSurfaceTestView.m  main.cpp  main.h  main.mm
common/: Host.cpp  Host.h  Receiver.cpp  Receiver.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h  Util.cpp  Util.h
server/: CMakeLists.txt  DWMCapturer.cpp  DWMCapturer.h  Encoder.cpp  Encoder.h  GDICapturer.cpp  GDICapturer.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h  Win8Capturer.cpp  Win8Capturer.h  main.cpp
win8dupl/: Win8Dupl.cpp  Win8Dupl.sln
win8dupl/Win8Dupl/Win8Dupl/: Win8Dupl.cpp  Win8Dupl.h  Win8Dupl.vcxproj  stdafx.cpp
